# simple-connection-lib

./: LICENSE  configure.ac  simple-connection.pc.in
src/: Makefile.am  tcp.c  tcp.h  udp.c  udp.h
test/: Makefile  Makefile.am  tcpclient-ws.c  tcpclient.c  tcpserver-ws.c  tcpserver.c  tcpsslclient-ws.c  tcpsslclient.c  tcpsslserver-ws.c  tcpsslserver-ws.html  tcpsslserver.c  udpchat.c  udpclient.c  udpserver.c
