AM_CFLAGS = -I../src

noinst_PROGRAMS = tcpclient tcpserver tcpsslclient tcpsslserver udpchat udpclient udpserver

tcpclient_SOURCES = tcpclient.c
tcpclient_LDADD = ../src/libsimple_connection.la

tcpserver_SOURCES = tcpserver.c
tcpserver_LDADD = ../src/libsimple_connection.la

tcpsslclient_SOURCES = tcpsslclient.c
tcpsslclient_LDADD = ../src/libsimple_connection.la

tcpsslserver_SOURCES = tcpsslserver.c
tcpsslserver_LDADD = ../src/libsimple_connection.la

udpclient_SOURCES = udpclient.c
udpclient_LDADD = ../src/libsimple_connection.la

udpserver_SOURCES = udpserver.c
udpserver_LDADD = ../src/libsimple_connection.la

udpchat_SOURCES = udpchat.c
udpchat_LDADD = ../src/libsimple_connection.la
